# T-WFC

./: .gitignore  CHANGELOG.md  README.ko.md  README.md  pyproject.toml
docs/: CONCEPT.en.md  CONCEPT.md  RESULT.en.md  RESULT.md  VERIFICATION.en.md  VERIFICATION.md
docs/archive/: LOG_GUIDE.md
docs/daily_logs/2026-03-15/: work_log.md
docs/daily_logs/2026-03-16/: work_log.md
docs/daily_logs/2026-03-17/: work_log.md
docs/daily_logs/2026-03-18/: work_log.md
docs/media/: make_moons_seed_report.md
src/t_wfc/: __init__.py  baseline.py  batch.py  cli.py  data.py  model.py  reporting.py  state.py  trainer.py  visualization.py
tests/: test_smoke.py
